@@ -1,4 +1,4 @@
-Version=1.2.1023
+Version=1.2.1024
 ModuleNamespace=IPSLibrary::app::hardware::Plugwise
 
 [App]
