@@ -1,3 +1,7 @@
+Version=1.2.1024
+ - Schalten eines Circles durch externe Scripte
+ - 'AUTORESTORESWITCH' in der Konfiguration schaltet Circle nach Stromausfall 
+    wieder in die letzte Sollstellung  
 Version=1.2.1023
  - Anzeigen in eine ~htmlBox
  - Profile der Variablen werden nicht mehr ueberschrieben
